--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
   --primaryColor: #fff;
   --navColor1: #21292c;
-  --navColor2: #aa3e39;
+  --navColor2: rgb(184,1,35);
   --navColor3: #aa6e39;
   --navColor4: #236267;
   --navColor5: #2c8437;
