--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=PT+Serif:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=PT+Serif:wght@400;700&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
+
+
 /* :root {
   --primaryColor: #fff;
   --navColor1: #21292c;
@@ -17,6 +19,7 @@
   --navColor4: #2d5873;
   --navColor5: #F2D4AE; 
 }
+
 
 html {
   box-sizing: border-box;
@@ -43,11 +46,11 @@ body {
   transform: translateX(-100vw);
 }
 .overlay-slide-right {
-  transition: all 0.4s ease-in-out;
+  transition: all 0.5s ease-in-out;
   transform: translateX(0);
 }
 .overlay-slide-left {
-  transition: all 0.8s ease-in-out;
+  transition: all 0.5s ease-in-out;
   transform: translateX(-100vw);
 }
 
@@ -73,13 +76,15 @@ nav ul li {
 
 nav li a {
   position: relative;
-  top: 45%;
+  top: 10%;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 4px;
   text-decoration: none;
   display: block;
   text-align: center;
+  font-size: 1.1rem;
+  padding: 2.8rem;
 }
 
 nav li a:hover{
@@ -121,16 +126,16 @@ nav li:nth-of-type(5) {
   animation: slide-in 0.4s linear 0.2s both
 }
 .slide-in-2 {
-  animation: slide-in 0.4s linear 0.4s both
+  animation: slide-in 0.4s linear 0.3s both
 }
 .slide-in-3 {
-  animation: slide-in 0.4s linear 0.6s both
+  animation: slide-in 0.4s linear 0.4s both
 }
 .slide-in-4 {
-  animation: slide-in 0.4s linear 0.8s both
+  animation: slide-in 0.4s linear 0.5s both
 }
 .slide-in-5 {
-  animation: slide-in 0.4s linear 1s both
+  animation: slide-in 0.4s linear 0.6s both
 }
 
 @keyframes slide-in {
@@ -144,19 +149,19 @@ nav li:nth-of-type(5) {
 
 /* Slide 5ut animation with delay for each nav item */
 .slide-out-1 {
-  animation: slide-out 0.3s linear 0.5s both
+  animation: slide-out 0.3s linear 0.25s both
 }
 .slide-out-2 {
-  animation: slide-out 0.3s linear 0.4s both
+  animation: slide-out 0.3s linear 0.20s both
 }
 .slide-out-3 {
-  animation: slide-out 0.3s linear 0.3s both
+  animation: slide-out 0.3s linear 0.15s both
 }
 .slide-out-4 {
-  animation: slide-out 0.3s linear 0.2s both
+  animation: slide-out 0.3s linear 0.1s both
 }
 .slide-out-5 {
-  animation: slide-out 0.3s linear 0.1s both
+  animation: slide-out 0.3s linear 0.05s both
 }
 
 @keyframes slide-out {
@@ -177,7 +182,6 @@ nav li:nth-of-type(5) {
   z-index: 10;
   display: inline;
   cursor: pointer;
-  
 }
 
 .bar1,
@@ -214,8 +218,16 @@ section {
   flex-direction: column;
   letter-spacing: 1px;
   color: var(--primaryColor);
+  
 }
-
+section h1{
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 3.2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+}
 
 /* Section Home */
 section#home {
@@ -225,6 +237,7 @@ section#home {
   background-position: center center;
   color:black;
   align-items: center;
+  height: 100vh;
 }
 .home-titulo{
   position: absolute;
@@ -252,11 +265,6 @@ section#home a {
 section#about {
   background-color: var(--navColor2);
 }
-#wordCloud{
-  height: 478px;
-  margin-left: 426px;
-  width: 700px;
-}
 .section-container{
   display: flex;
   flex-direction: row;
@@ -265,8 +273,9 @@ section#about {
   height: 100%;
   margin: auto;
   justify-content: space-between;
+  position: relative;
 }
-.item{
+.item-flex2{
   width: calc((100% - 2rem) / 2);
   margin-bottom: 10px;
   flex: none;
@@ -298,20 +307,38 @@ section#about {
 .item ul{
   padding-top: 0;
   margin-top: 0;
-  padding-bottom: 40px;
+  padding-bottom: 2rem;
+  text-justify: auto;
+  padding-left: 4rem;
 }
 .item li{
   padding: 0;
   padding-bottom: 5px;
   margin: -2px;
+  text-justify:distribute;
+}
+/* SECTION SKILLS */
+#skills p{
+  text-align: justify;
+  padding: 0px 15px 0px 10px;
+  margin: auto;
 }
 
-section#about h1{
-  margin-top: 4rem;
-  text-align: center;
-  font-size: 3.2rem;
-  font-weight: 300;
+.bio-image{
+  float: right;
+  width: 50%;
+  margin: 10px 0 0 10px;
+  max-height: 280px;
+  box-shadow: 10px 10px 20px 3px rgba(0, 0, 0, 0.6);
+/*   position: absolute;
+  top: 40%;
+  padding: 0 33% 0 33%;
+  width: 33%; */
 }
+#item-text{
+  margin-right: 1rem !important;
+}
+
 section#about h2{
   display:block;
   margin-top: 0;
@@ -331,7 +358,65 @@ section#projects {
 /* SECTION CONTACT */
 section#contact {
   background-color: var(--navColor5);
+  position: relative;
 }
+.social-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: var(--navColor1);
+}
+/* .fa-inverse{
+  color: var(--navColor1) !important;
+} */
+.social-links a {
+  color: var(--navColor1);
+  font-size: 5rem;
+  width: 6rem;
+  height: 5rem;
+  transition: all 0.3s ease-in;
+  margin: 20vh  5% auto 5%;
+  text-align: center;
+}
+.social-links a:hover {
+  transform: translateY(-4px);
+}
+.footer{
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+}
+.footer__text {
+  color: var(--navColor1);
+  font-size: 1rem;  
+  padding: 2rem 0;
+  margin: auto;
+  bottom: 1rem;
+}
+
+.footer__text a {
+  transition: all 0.4s;
+  display: inline-block;
+}
+
+.footer__text a:visited{
+  color: var(--navColor1);
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 1;
+  width: 50%;
+  border-top: 2px solid rgba(255, 255, 255, 0.1);
+}
+
 
 /* Media Query: Large Smartphone (Vertical) */
 @media (max-width: 600px) {
@@ -339,9 +424,70 @@ section#contact {
     top: 1rem;
     left: 1rem;
   }
-
+  .home-titulo{
+    margin: 0 25px 0 25px;
+    top: 35%;
+  }
   .menu-bars {
     top: 0.5rem;
     right: 1rem;
   }
+  section#about{
+    height: auto;
+  }
+  section#skills{
+    height: auto;
+  }
+  section h1{
+    font-size: 2.5rem;
+  }
+  section#about h2{
+    font-size: 2rem;
+  }
+  
+
+}
+
+@media (max-width: 760px){
+  section h1{
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
+}
+  .section-container{
+      margin-bottom: 2rem;
+      display: inline-block;
+      margin-top: -10px;
+      margin-bottom: 10vh;
+  }
+  .item-flex2{
+    margin: 0;
+    width: unset;
+  }
+  .margin-strech{
+    margin: 10px 10px 10px 15px;
+  }
+  section#about h2{
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+  section#skills{
+    height: auto;
+  }
+
+  section#item-titulo2{
+    margin-top: 2rem;
+  }
+  .bio-image{
+    display: block;
+    float: unset;
+    width: auto;
+    margin: 15px auto 25px auto;
+
+  }
+}
+@media (max-width: 1180px){
+  section#skills{
+    height: auto;
+  }
+  
 }
