--- a/style.css
+++ b/style.css
@@ -123,19 +123,19 @@ nav li:nth-of-type(5) {
 }
 /* Slide in animation with delay for each nav item */
 .slide-in-1 {
-  animation: slide-in 0.1s linear 0.2s both
+  animation: slide-in 0.2s linear 0.2s both
 }
 .slide-in-2 {
-  animation: slide-in 0.1s linear 0.29s both
+  animation: slide-in 0.2s linear 0.3s both
 }
 .slide-in-3 {
-  animation: slide-in 0.1s linear 0.38s both
+  animation: slide-in 0.2s linear 0.4s both
 }
 .slide-in-4 {
-  animation: slide-in 0.1s linear 0.47s both
+  animation: slide-in 0.2s linear 0.5s both
 }
 .slide-in-5 {
-  animation: slide-in 0.1s linear 0.56s both
+  animation: slide-in 0.2s linear 0.6s both
 }
 
 @keyframes slide-in {
@@ -149,19 +149,19 @@ nav li:nth-of-type(5) {
 
 /* Slide 5ut animation with delay for each nav item */
 .slide-out-1 {
-  animation: slide-out 0.3s linear 0.25s both
+  animation: slide-out 0.2s linear 0.2s both
 }
 .slide-out-2 {
-  animation: slide-out 0.3s linear 0.20s both
+  animation: slide-out 0.2s linear 0.3s both
 }
 .slide-out-3 {
-  animation: slide-out 0.3s linear 0.15s both
+  animation: slide-out 0.2s linear 0.4s both
 }
 .slide-out-4 {
-  animation: slide-out 0.3s linear 0.1s both
+  animation: slide-out 0.2s linear 0.5s both
 }
 .slide-out-5 {
-  animation: slide-out 0.3s linear 0.05s both
+  animation: slide-out 0.2s linear 0.6s both
 }
 
 @keyframes slide-out {
@@ -368,14 +368,14 @@ section#contact {
   flex-wrap: wrap;
   color: var(--navColor1);
 }
-/* .fa-inverse{
+ .fa-inverse{
   color: var(--navColor1) !important;
-} */
+} 
 .social-links a {
   color: var(--navColor1);
   font-size: 5rem;
   width: 6rem;
-  height: 5rem;
+  height: 4rem;
   transition: all 0.3s ease-in;
   margin: 20vh  5% auto 5%;
   text-align: center;
