--- a/style.css
+++ b/style.css
@@ -75,20 +75,19 @@ nav ul li {
 }
 
 nav li a {
+  display: block;
   position: relative;
-  top: 17%;
   color: #fff;
   text-transform: uppercase;
+  top: 4vh; 
   letter-spacing: 4px;
   text-decoration: none;
-  display: block;
+
   text-align: center;
   font-size: 1.1rem;
-  padding: 2.8rem;
+  padding: 5vh;
 }
-#nav-5{
-  color: var(--navColor1);
-}
+
 nav li a:hover{
   transform: scale(1.2);
 }
@@ -123,7 +122,13 @@ nav li:nth-of-type(4) {
 nav li:nth-of-type(5) {
   background-color: var(--navColor5);
 }
-/* Slide in animation with delay for each nav item */
+
+nav #nav-5 a{
+  color: black;
+}
+
+/* Slide IN animation with delay for each nav item */
+
 .slide-in-1 {
   animation: slide-in 0.2s linear 0.2s both
 }
@@ -149,7 +154,7 @@ nav li:nth-of-type(5) {
   }
 }
 
-/* Slide 5ut animation with delay for each nav item */
+/* Slide OUT animation with delay for each nav item */
 .slide-out-1 {
   animation: slide-out 0.2s linear 0.6s both
 }
@@ -214,7 +219,7 @@ nav li:nth-of-type(5) {
 /* --- Sections ------------------------------------ */
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -223,7 +228,7 @@ section {
   
 }
 section h1{
-  margin-top: 4rem;
+  margin-top: 3rem;
   margin-bottom: 2rem;
   text-align: center;
   font-size: 3.2rem;
@@ -266,6 +271,7 @@ section#home a {
 /* SECTION ABOUT */
 section#about {
   background-color: var(--navColor2);
+
 }
 .section-container{
   display: flex;
@@ -273,7 +279,7 @@ section#about {
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-  margin: auto;
+  margin-bottom: 10vh;
   justify-content: space-between;
   position: relative;
 }
@@ -328,15 +334,17 @@ section#about {
 
 .bio-image{
   float: right;
-  width: 50%;
+  min-width: 35%;
   margin: 10px 0 0 10px;
-  max-height: 280px;
-  box-shadow: 10px 10px 20px 3px rgba(0, 0, 0, 0.6);
-/*   position: absolute;
+  max-height: 280px;  
+/*
+  box-shadow: 10px 10px 20px 3px rgba(0, 0, 0, 0.6);   
+  position: absolute;
   top: 40%;
   padding: 0 33% 0 33%;
   width: 33%; */
 }
+
 #item-text{
   margin-right: 1rem !important;
 }
@@ -357,6 +365,29 @@ section#skills {
 section#projects {
   background-color: var(--navColor4);
 }
+
+
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  padding-inline-start: 0px;
+  margin: 0 20px 20px;
+}
+section#projects li{
+  height: 45vh;
+  flex-grow: 1;
+  list-style: none;
+}
+
+.pro-image{
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
 /* SECTION CONTACT */
 section#contact {
   background-color: var(--navColor5);
@@ -399,18 +430,15 @@ section#contact {
   margin: auto;
   bottom: 1rem;
 }
-
 .footer__text a {
   transition: all 0.4s;
   display: inline-block;
 }
-
 .footer__text a:visited{
   color: var(--navColor1);
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 }
-
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -418,9 +446,50 @@ hr {
   width: 50%;
   border-top: 2px solid rgba(255, 255, 255, 0.1);
 }
-
+section#skills .parrafo1{
+  margin-left: 5%;
+}
 
 /* Media Query: Large Smartphone (Vertical) */
+@media (max-width: 870px){
+  .bio-image{
+    display: block;
+    float: unset;
+    width: auto;
+    margin: 15px auto 25px auto;
+  }
+  #skills .parrafo1{
+    margin-left:unset !important;
+  }
+}
+@media (max-width: 760px){
+  section h1{
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
+}
+  .section-container{
+      margin-bottom: 2rem;
+      display: inline-block;
+      margin-top: -10px;
+
+  }
+  .item-flex2{
+    margin: 0;
+    width: unset;
+    font-size: 1.5rem;
+  }
+  .margin-strech{
+    margin: 10px 10px 10px 15px;
+  }
+  section#about h2{
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+
+  section#item-titulo2{
+    margin-top: 2rem;
+  }
+}
 @media (max-width: 600px) {
   section#home a {
     top: 1rem;
@@ -434,62 +503,27 @@ hr {
     top: 0.5rem;
     right: 1rem;
   }
-  section#about{
-    height: auto;
-  }
-  section#skills{
-    height: auto;
-  }
+
   section h1{
     font-size: 2.5rem;
   }
   section#about h2{
     font-size: 2rem;
   }
-  
-
-}
-
-@media (max-width: 760px){
-  section h1{
-    margin-top: 3rem;
-    margin-bottom: 0.5rem;
-}
-  .section-container{
-      margin-bottom: 2rem;
-      display: inline-block;
-      margin-top: -10px;
-      margin-bottom: 10vh;
-  }
   .item-flex2{
     margin: 0;
     width: unset;
+    font-size: 1rem;
   }
-  .margin-strech{
-    margin: 10px 10px 10px 15px;
-  }
-  section#about h2{
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-  }
-  section#skills{
-    height: auto;
+  .gallery{
+    margin: 10px 20px 20px;
   }
 
-  section#item-titulo2{
-    margin-top: 2rem;
-  }
-  .bio-image{
-    display: block;
-    float: unset;
-    width: auto;
-    margin: 15px auto 25px auto;
-
-  }
 }
-@media (max-width: 1180px){
-  section#skills{
-    height: auto;
+
+@media (max-width: 428px){
+  .social-links a {
+    margin: 12vh  5% auto 5%;
+    font-size: 4rem;
   }
-  
 }
