--- a/style.css
+++ b/style.css
@@ -235,6 +235,9 @@ section h1{
   font-weight: 300;
   text-transform: uppercase;
 }
+section#projects h1{
+  margin-bottom: 1rem;
+}
 
 /* Section Home */
 section#home {
@@ -325,6 +328,10 @@ section#about {
   margin: -2px;
   text-justify:distribute;
 }
+section#about a {
+  color: #000;
+}
+
 /* SECTION SKILLS */
 #skills p{
   text-align: justify;
@@ -376,16 +383,17 @@ section#projects {
   margin: 0 20px 20px;
 }
 section#projects li{
-  height: 45vh;
+  height: 40vh;
   flex-grow: 1;
   list-style: none;
 }
 
 .pro-image{
   max-height: 100%;
-  min-width: 100%;
+  min-width: 99%;
   object-fit: cover;
   vertical-align: bottom;
+  padding: 0px 1px 1px 1px;
 }
 
 /* SECTION CONTACT */
@@ -449,6 +457,8 @@ hr {
 section#skills .parrafo1{
   margin-left: 5%;
 }
+
+
 
 /* Media Query: Large Smartphone (Vertical) */
 @media (max-width:1099px){
