--- a/style.css
+++ b/style.css
@@ -1,16 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=PT+Serif:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=PT+Serif:wght@400;700&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
 
-
-/* :root {
-  --primaryColor: #fff;
-  --navColor1: #21292c;
-  --navColor2: rgba(144,100,250,0.95);
-  --navColor3: rgba(104, 105, 207,0.97);
-  --navColor4:  rgb(127, 166, 241,0.97); 
-  --navColor5: rgba(105,174,216,0.98);
-} */
 :root {
   --primaryColor: black;
   --navColor1: #21292c;
@@ -241,8 +230,7 @@ section#projects h1{
 
 /* Section Home */
 section#home {
-  background-image: url("https://images.unsplash.com/photo-1541598599844-19a0319b8846?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80");
-  //background-image: url("https://images.unsplash.com/photo-1541462608143-67571c6738dd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
+  background-image: url("./src/portada1.JPG");
   background-size: cover;
   background-position: center center;
   color:black;
@@ -281,6 +269,7 @@ section#about {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+  height: 70vh;
   height: 100%;
   margin-bottom: 2vh;
   justify-content: space-between;
@@ -373,8 +362,6 @@ section#projects {
   background-color: var(--navColor4);
 }
 
-
-
 .gallery{
   display: flex;
   flex-wrap: wrap;
@@ -390,7 +377,9 @@ section#projects li{
 
 .pro-image{
   max-height: 100%;
+  //width: 500px;
   min-width: 99%;
+  max-width: 100%;
   object-fit: cover;
   vertical-align: bottom;
   padding: 0px 1px 1px 1px;
@@ -465,7 +454,7 @@ section#skills .parrafo1{
   .bio-image{
     display: block;
     float: unset;
-    width: auto;
+    max-width: 100%;
     margin: 15px auto 25px auto;
   }
 }
