margen-top a secciones y estilos a galeria

--- a/style.css
+++ b/style.css
@@ -71,10 +71,10 @@ nav li a {
   top: 4vh; 
   letter-spacing: 4px;
   text-decoration: none;
-
   text-align: center;
   font-size: 1.1rem;
   padding: 5vh;
+
 }
 
 nav li a:hover{
@@ -274,6 +274,10 @@ section#about {
   margin-bottom: 2vh;
   justify-content: space-between;
   position: relative;
+  
+}
+section#about .section-container{
+  margin-top: 5%;
 }
 .item-flex2{
   width: calc((100% - 2rem) / 2);
@@ -319,6 +323,8 @@ section#about {
 }
 section#about a {
   color: #000;
+  text-decoration: none;
+  border-bottom: 1px solid black;
 }
 
 /* SECTION SKILLS */
@@ -365,23 +371,36 @@ section#projects {
 .gallery{
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
-  padding-inline-start: 0px;
-  margin: 0 20px 20px;
+  margin: 1rem 1rem;
+  
 }
-section#projects li{
-  height: 40vh;
-  flex-grow: 1;
-  list-style: none;
+.gallery-item{
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  margin: 30% 0 0 0;
+  flex: 1 0 24rem;
+}
+.gallery-image{
+  display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	transition: transform 500ms ease-out;
+}
+.gallery-image:hover {
+	transform: scale(1.15);
 }
 
-.pro-image{
-  max-height: 100%;
-  min-width: 99%;
-  max-width: 100%;
-  object-fit: cover;
-  vertical-align: bottom;
-  padding: 0px 1px 1px 1px;
+@supports (display: grid) {
+	.gallery {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-gap: 0.5rem;
+	}
+
+	.gallery {
+		margin: 0.3rem;
+	}
 }
 
 /* SECTION CONTACT */
@@ -406,7 +425,7 @@ section#contact {
   width: 4rem;
   height: 4rem;
   transition: all 0.3s ease-in;
-  margin: 20vh  5% auto 5%;
+  margin: 21vh  5% auto 5%;
   text-align: center;
 }
 .social-links a:hover {
@@ -449,12 +468,20 @@ section#skills .parrafo1{
 
 
 /* Media Query: Large Smartphone (Vertical) */
-@media (max-width:1099px){
+@media (max-width:1200px){
   .bio-image{
     display: block;
     float: unset;
     max-width: 100%;
     margin: 15px auto 25px auto;
+  }
+}
+@media (max-width:1010px){
+  .gallery-item{
+    margin: 0.5rem;
+  }
+  section#about .section-container{
+    margin-top: unset;
   }
 }
 @media (max-width: 870px){
@@ -467,12 +494,11 @@ section#skills .parrafo1{
   section h1{
     margin-top: 3rem;
     margin-bottom: 0.5rem;
-}
+  }
   .section-container{
       margin-bottom: 2rem;
       display: inline-block;
       margin-top: -10px;
-
   }
   .item-flex2{
     margin: 0;
@@ -486,7 +512,6 @@ section#skills .parrafo1{
     margin-bottom: 1rem;
     margin-top: 2rem;
   }
-
   section#item-titulo2{
     margin-top: 2rem;
   }
@@ -508,7 +533,6 @@ section#skills .parrafo1{
     top: 0.5rem;
     right: 1rem;
   }
-
   section h1{
     font-size: 2.5rem;
   }
@@ -521,9 +545,9 @@ section#skills .parrafo1{
     font-size: 1rem;
   }
   .gallery{
+    
     margin: 10px 20px 20px;
   }
-
 }
 
 @media (max-width: 428px){
